--- a/.github/workflows/egg.yaml
+++ b/.github/workflows/egg.yaml
@@ -33,6 +33,9 @@ jobs:
           git config --global user.name "dongdongfeifei"
           git config --global user.email "3135631305@qq.com"
 
+      - name: List files
+        run: ls -R dist # 列出dist文件夹内容，以便调试
+
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
