--- a/.github/workflows/egg.yaml
+++ b/.github/workflows/egg.yaml
@@ -42,4 +42,4 @@ jobs:
           branch: gh-pages # 部署到gh-pages分支
           folder: dist # 你的构建产物所在的文件夹
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub自动提供的token
+          GITHUB_TOKEN: ${{ secrets.MY_PAT }} # GitHub自动提供的token
